server2/k8s/server1_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server1_app
spec:
  containers:
    - image: server1_image
      name: server1_app
      imagePullPolicy: Never
      livenessProbe:
        httpGet:
          path: /healthz
          port: 5000
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
      ports:
        - containerPort: 5000
          name: http
          protocol: TCP
