server2/k8s/server1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: licenta
  labels:
    app: licenta
spec:
  type: LoadBalancer
  selector:
    app: licenta
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
# ---
