server2/k8s/server1_service_monitor.yaml
# Service frontend
apiVersion: v1
kind: Service
metadata:
  labels:
    app: licenta
  name: licenta
  namespace: default
spec:
  selector:
    app: licenta
  ports:
    - name: metrics
      port: 80
      targetPort: 5000

# Service Monitor
